updated cometchat resources

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ REACT_APP_FIREBASE_STORAGE_BUCKET="chat-marketplace-ff69c.appspot.com"
 REACT_APP_FIREBASE_SENDER_ID="451015682144"
 REACT_APP_FIREBASE_APP_ID="1:451015682144:web:10a39bc384a2f00cf93b05"
 
-REACT_APP_COMETCHAT_APP_ID=<your cometchat app id>
-REACT_APP_COMETCHAT_REGION=<you commet chat region>
-REACT_APP_COMETCHAT_AUTH_KEY=<your cometchat auth key>
+REACT_APP_COMETCHAT_APP_ID="234344c470cee537"
+REACT_APP_COMETCHAT_REGION="us"
+REACT_APP_COMETCHAT_AUTH_KEY="8a6fc4e8fa5caa5efc451420f64c359f16b1082a"
