--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cometchat-pro/chat": "^2.2.1",
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/firestore": "^0.5.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,7 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+		"@emotion/react": "^11",
+		"dateformat": "^4.0.0",
+		"html-react-parser": "^1.4.5",
+		"@twemoji/api": "^14.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +45,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "web-vitals": "^3.0.4",
+		"jest": "26.6.0",
+		"jest-canvas-mock": "^2.3.1",
+		"babel-jest": "26.6.0"
   }
 }
